--- a/Gyde/View Controllers/TAPlacesVC.xib
+++ b/Gyde/View Controllers/TAPlacesVC.xib
@@ -269,7 +269,7 @@
 						<string key="NSFrame">{{0, 194}, {320, 2}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="157341408"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -370,6 +370,7 @@
 						<string key="NSFrame">{{16, 160}, {280, 41}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="34626097"/>
 						<bool key="IBUIOpaque">NO</bool>
