--- a/Gyde/TableView Cells/TAPhotoTableCell.xib
+++ b/Gyde/TableView Cells/TAPhotoTableCell.xib
@@ -42,13 +42,28 @@
 						<reference key="NSNextResponder" ref="703827143"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIView" id="223474422">
+								<reference key="NSNextResponder" ref="52903112"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{10, 1}, {300, 44}}</string>
+								<reference key="NSSuperview" ref="52903112"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="400942304"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC43OTYwNzg0MzE0IDAuNzU2ODYyNzQ1MSAwLjY5MDE5NjA3ODQAA</bytes>
+								</object>
+								<int key="IBUIContentMode">5</int>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 							<object class="IBUIView" id="290854355">
 								<reference key="NSNextResponder" ref="52903112"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 0}, {300, 44}}</string>
 								<reference key="NSSuperview" ref="52903112"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="400942304"/>
+								<reference key="NSNextKeyView" ref="223474422"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -57,6 +72,7 @@
 										<int key="NSID">2</int>
 									</object>
 								</object>
+								<int key="IBUIContentMode">5</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 							<object class="IBUIImageView" id="400942304">
@@ -240,6 +256,7 @@
 							<reference ref="138975442"/>
 							<reference ref="290854355"/>
 							<reference ref="730940060"/>
+							<reference ref="223474422"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -268,6 +285,11 @@
 						<reference key="object" ref="730940060"/>
 						<reference key="parent" ref="703827143"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">37</int>
+						<reference key="object" ref="223474422"/>
+						<reference key="parent" ref="703827143"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -281,13 +303,14 @@
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="32.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">36</int>
+			<int key="maxID">37</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -296,15 +319,25 @@
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="authorButtonTapped:">id</string>
+						<string key="displayEmail:">id</string>
 						<string key="initFollowersList:">id</string>
+						<string key="publishGuideToFacebookFeed:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="authorButtonTapped:">
 							<string key="name">authorButtonTapped:</string>
 							<string key="candidateClassName">id</string>
 						</object>
+						<object class="IBActionInfo" key="displayEmail:">
+							<string key="name">displayEmail:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="initFollowersList:">
 							<string key="name">initFollowersList:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="publishGuideToFacebookFeed:">
+							<string key="name">publishGuideToFacebookFeed:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
