--- a/Gyde/View Controllers/EditProfileVC.xib
+++ b/Gyde/View Controllers/EditProfileVC.xib
@@ -45,7 +45,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 44}, {320, 372}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="900820304"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -64,7 +63,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{320, 44}</string>
 								<reference key="NSSuperview" ref="834177851"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="819424069"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -79,7 +77,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{261, 8}, {54, 27}}</string>
 								<reference key="NSSuperview" ref="834177851"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="347697169"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -123,7 +120,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 8}, {54, 27}}</string>
 								<reference key="NSSuperview" ref="834177851"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="180814497"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -152,7 +148,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="227114391"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -173,7 +168,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{13, 12}, {294, 45}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="567062355"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -188,7 +182,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{29, 27}, {34, 10}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="554522279"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -203,7 +196,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{110, 12}, {190, 40}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="481638442"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -239,7 +231,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{13, 57}, {294, 45}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="265577371"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -251,7 +242,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{13, 102}, {294, 105}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="549431884"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -266,7 +256,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{29, 72}, {33, 10}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="121884762"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -281,7 +270,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{110, 57}, {190, 40}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="62696888"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -310,7 +298,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{13, 252}, {294, 45}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="910650634"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -322,7 +309,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{29, 267}, {40, 9}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="254518990"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -337,7 +323,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{72, 265}, {15, 15}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1000173579"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -348,7 +333,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{85, 252}, {217, 40}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="983949097"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -381,7 +365,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{13, 207}, {294, 45}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="994539953"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -405,7 +388,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{110, 207}, {190, 40}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="914334381"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -442,7 +424,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{29, 222}, {25, 10}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="58269222"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -457,7 +438,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{25, 136}, {270, 56}}</string>
 								<reference key="NSSuperview" ref="900820304"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="704712128"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -488,7 +468,6 @@
 						</array>
 						<string key="NSFrame">{{0, 44}, {320, 367}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1003157810"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -500,8 +479,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 406}, {320, 5}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -515,7 +492,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 44}, {320, 5}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="31731328"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -528,7 +504,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 411}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="834177851"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -870,71 +845,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">87</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">EditProfileVC</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="saveButtonTapped:">id</string>
-						<string key="selectCityButtonTapped:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="saveButtonTapped:">
-							<string key="name">saveButtonTapped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="selectCityButtonTapped:">
-							<string key="name">selectCityButtonTapped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="avatarView">UIImageView</string>
-						<string key="bioView">UITextView</string>
-						<string key="cityBtn">UIButton</string>
-						<string key="cityLabel">UILabel</string>
-						<string key="emailField">UITextField</string>
-						<string key="formScrollView">UIScrollView</string>
-						<string key="nameField">UITextField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="avatarView">
-							<string key="name">avatarView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bioView">
-							<string key="name">bioView</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cityBtn">
-							<string key="name">cityBtn</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cityLabel">
-							<string key="name">cityLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="emailField">
-							<string key="name">emailField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="formScrollView">
-							<string key="name">formScrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nameField">
-							<string key="name">nameField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EditProfileVC.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -944,7 +855,7 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="cream-bg.jpg">{320, 372}</string>
+			<string key="cream-bg.jpg">{320, 504}</string>
 			<string key="form-bio-field-bg.png">{294, 105}</string>
 			<string key="form-field-bg.png">{294, 45}</string>
 			<string key="form-label-city.png">{25, 9}</string>
